# biweekly-ai

./: .gitignore  CLAUDE.md  HARNESS.md  PLAYBOOK.md  README.md
challenge-1/: README.md  RETRO.md  pyproject.toml
challenge-1/configs/: warehouse.yaml
challenge-1/docker/: docker-compose.yml  sim_entrypoint.sh
challenge-1/docs/: ARCHITECTURE.md  EXECUTION_PLAN.md  TECH_STACK.md
challenge-1/docs/progress/: single_pick_log.jsonl  sprint-0.md  sprint-1.md  sprint-2.md  sprint-5.md
challenge-1/scripts/: __init__.py  demo.sh  replay.py  test_single_pick.py  validate_smolvla.py  visualize_comparison.py
challenge-1/src/common/: logger.py  types.py
challenge-1/src/executor/: action_converter.py  bridge_host.py  vla_node.py
challenge-1/src/executor/models/: scripted_policy.py
challenge-1/src/orchestrator/: claude_wrapper.py  planner.py  task_manager.py
challenge-1/src/orchestrator/prompts/: planner_parse.txt  (+3 more)
challenge-1/tests/: test_sprint0_vision.py  test_sprint2_executor.py  test_sprint3_planner.py  test_sprint4_recovery.py
challenge-2/: .gitignore  EXECUTION_PLAN.md  HARNESS.md  PRD.md  README.md  RETRO.md  TECH_STACK.md  TIMELINE.md  VERIFY.md  VERIFY.sh  docker-compose.yml  portfolio.example.yaml  pyproject.toml
challenge-2/prompts/: session-0.txt  session-1.txt  session-2.txt  session-3.txt  session-4.txt
challenge-2/scripts/: checkpoint_sprint0.sh  checkpoint_sprint1.sh  checkpoint_sprint2.sh  checkpoint_sprint3.sh  checkpoint_sprint4.sh  cost_probe.py  fetch_fixtures.py  overnight.sh  run_ingest.py
challenge-2/src/ria/: cli.py  cost_tracker.py  fixtures.py  journal.py  models.py
challenge-2/tests/: test_agent_loop.py  test_classify.py  test_cost_tracker.py  test_emit_report.py  test_event_loop.py  test_fixtures.py  test_ingest_filings.py  test_journal_append.py  test_portfolio_schema.py  test_tools_news.py  test_tools_prices.py  test_tools_rag.py
(+218 files in other folders)
